# DeepKNLP-26.03

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  server_connect.txt  task1-cls-guide.md  task1-cls-study.md  task2-ner-guide.md  task2-ner-study.md  task3-gen-guide.md  task3-gen-study.md  task4-qa-guide.md  task4A-qa-ext-study.md  task4B-qa-gen-study.md
DeepKNLP/: arguments.py  cls.py  helper.py  metrics.py  ner.py
data/klue-ner/: test.jsonl  valid.jsonl
data/kmou-ner/: test.jsonl  valid.jsonl
data/korquad/: sample.json
data/nsmc/: ratings_valid.txt
data/nsmc-mini/: ratings_test.txt
task1-cls/: README.md  README_stepwise_learning.md  run_cls-serve.help  run_cls-test.help  run_cls-train.help  run_cls.help  run_cls.py  step1_basic_structure.py  step2_data_processing.py  step3_training_steps.py  step4_training_loops.py  step5_cli_and_serving.py
task1-cls/solutions/: run_cls_reference.py  step1_solution.py  step2_solution.py  step3_solution.py  step4_solution.py  step5_solution.py
task2-ner/: README.md  README_stepwise_learning.md  run_ner-serve.help  run_ner-test.help  run_ner-train.help  run_ner.help  run_ner.py  step1_basic_structure.py  step2_data_processing.py  step3_training_steps.py  step4_training_loops.py  step5_cli_and_serving.py
task2-ner/solutions/: run_ner_reference.py  step1_solution.py  step2_solution.py  step3_solution.py
task3-gen/: README.md  infer_gen.ipynb  run_gen.py
task3-gen/solutions/: infer_gen_reference.py  serve_gen_reference.py  (+4 more)
task4A-qa-ext/: README.md  eval_qa-1.sh  eval_qa-2.sh  eval_qa-3.sh  evaluate-KorQuAD-v1.py  infer_qa.py  serve_qa.py  train_qa-1.sh  train_qa-2.sh  train_qa-3.sh  train_qa.py  utils_qa.py
task4B-qa-gen/: README.md  eval_qa_seq2seq-1.sh  eval_qa_seq2seq-2.sh  infer_qa_seq2seq.py  serve_qa_seq2seq.py  train_qa_seq2seq-1.sh  train_qa_seq2seq-2.sh  train_qa_seq2seq.py
templates/: serve_cls.html  serve_gen.html  serve_ner.html  serve_qa.html  serve_qa_seq2seq.html
(+8 files in other folders)
