[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DeepKNLP"
version = "0.1.0"
description = "Transformer-based Korean Natural Language Processing"
authors = [
    {name = "chrisjihee", email = "chrisjihee@naver.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["nlp", "korean", "transformer", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.7.0",
    "lightning",
    "pytorch_lightning", 
    "accelerate",
    "sentencepiece",
    "scikit-learn",
    "torchmetrics",
    "seqeval",
    "datasets",
    "tensorboard",
    "evaluate",
    "pydantic",
    "importlib-metadata",
    "Flask",
    "Flask-Classful",
    "chrisbase==0.5.8",
]

# PyTorch CUDA 버전별 설치 안내:
# pip install -e .[cuda118] --extra-index-url https://download.pytorch.org/whl/cu118
# pip install -e .[cuda121] --extra-index-url https://download.pytorch.org/whl/cu121
# pip install -e .[cpu] --extra-index-url https://download.pytorch.org/whl/cpu

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/chrisjihee/DeepKNLP-25"
Repository = "https://github.com/chrisjihee/DeepKNLP-25"
Issues = "https://github.com/chrisjihee/DeepKNLP-25/issues"

[tool.setuptools]
packages = ["DeepKNLP"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.html"]
